# Object-Detection-Research

./: README.md  main.py  pyproject.toml
src/: geometry.py  geometry_text.py  video.py
