[project]
name = "object-detection-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "lap==0.5.12",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.4.5",
]

[dependency-groups]
dev = []
